Tue 18 Mar 2025 Etienne Brateau
	* Support GNU/Hurd platform for --target argument

Tue 25 Feb 2025 Aleksey Kravchenko
	* Support Intel SHA1 extension

Wed 16 Oct 2024 Aleksey Kravchenko
	* Bugfix: Fix librhash function rhash_print_magnet()

Tue 15 Oct 2024 Aleksey Kravchenko
	* Bugfix: Fix building by gcc 7

Mon 14 Oct 2024 Aleksey Kravchenko
	* === Version 1.4.5 ===

Thu 03 Oct 2024 Aleksey Kravchenko
	* Support --one-hash formatting option

Wed 02 Oct 2024 Aleksey Kravchenko
	* Bugfix: Show correct config directory in the manpage

Sun 17 Mar 2024 Aleksey Kravchenko
	* Bugfix: Updating must continue after a file access error

Sun 25 Feb 2024 Aleksey Kravchenko
	* Bugfix: Show correct size and time for Windows symlinks

Wed 14 Feb 2024 Brad King
	* Bugfix: Fix building with glibc < 2.15

Sun 24 Dec 2023 Brad King
	* Bugfix: Fix building on Solaris

Wed 29 Nov 2023 Brad King
	* Bugfix: Enable large file support on 32-bit targets

Mon 11 Sep 2023 Aleksey Kravchenko
	* Bugfix: Fix building on Unix

Mon 28 Aug 2023 Aleksey Kravchenko
	* Bugfix: Fix dynamic library symlink on macOS

Mon 21 Aug 2023 Aleksey Kravchenko
	* Bugfix: Fix runtime error on WinXP

Mon 31 Jul 2023 Aleksey Kravchenko
	* Bugfix: Fix dynamic library symlink on *BSD

Fri 14 Jul 2023 Aleksey Kravchenko
	* === Version 1.4.4 ===

Sun 09 Jul 2023 Aleksey Kravchenko
	* Remove obsolete rhash_timer functions (API breaking change)
	* Increment LibRHash soname version on Linux and Unix

Sun 18 Jun 2023 Aleksey Kravchenko
	* Support leading and trailing spaces in a file names
	* Changed the simple file format to fit the sfv format

Tue 13 Jun 2023 Aleksey Kravchenko
	* Bugfix: Fix slash usage with wilcards on Windows

Wed 01 Mar 2023 Aleksey Kravchenko
	* Print the algorithms being calculated on -vv

Tue 27 Sep 2022 Aleksey Kravchenko
	* Renamed --maxdepth option to --max-depth

Thu 22 Sep 2022 Aleksey Kravchenko
	* Supported escaping of special characters in file paths

Wed 14 Sep 2022 Aleksey Kravchenko