@@ -1,3 +1,6 @@
+Tue 15 Apr 2025 Aleksey Kravchenko
+	* Support --blake3 option for the BLAKE3 hash function
+
 Tue 18 Mar 2025 Etienne Brateau
 	* Support GNU/Hurd platform for --target argument
 
